sumo/tests/traci/get_variable/MeMeDetector/errors/UnknownAD/errors.traci
Error: Answered with error to command 161: Areal detector 'xxx' is not known
